Spacing issues

--- a/assets/sass/patterns/_events.scss
+++ b/assets/sass/patterns/_events.scss
@@ -13,7 +13,7 @@
   padding: 0 size('gutter');
 
   & + & {
-    padding-top: size('gutter');
+    padding-top: size('gutter') * 2;
   }
 }
 
@@ -21,12 +21,12 @@
   @include font-family('title');
   @include font-size('larger');
   font-weight: bold;
-  margin-bottom: size('gutter');
+  margin: negative('gutter') 0 size('gutter');
 }
 
 [data-feature] {
   @include clearfix;
-  margin-bottom: size('gutter');
+  margin-bottom: size('gutter') * 2;
 }
 
 [data-feature-section='third-tuesdays'] {
